@@ -7,6 +7,7 @@ Version 3.1.1 - SVN
  - Fix Makefile rules for building library objects.
  - Workaround sorttable colspan bug and use stable sorting.
  - Small documentation fixes.
+ - Fix expected output for reboot test-source.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
